--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "defaults": "^1.0.3",
     "express": "^4.16.4",
     "express-multipart-file-parser": "^0.1.2",
+    "inquirer": "^7.0.0",
     "json2csv": "^4.5.1",
     "morgan": "^1.9.1",
+    "mysql2": "^1.7.0",
     "sequelize": "^4.44.3",
     "uuid": "^3.3.2",
     "xhr2": "^0.1.4"
