--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "defaults": "^1.0.3",
     "express": "^4.16.4",
     "express-multipart-file-parser": "^0.1.2",
+    "faker": "^4.1.0",
     "inquirer": "^7.0.0",
     "json2csv": "^4.5.1",
     "morgan": "^1.9.1",
