--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "morgan": "^1.9.1",
     "mysql2": "^1.7.0",
     "sequelize": "^4.44.3",
+    "serverless-http": "^2.3.0",
     "sqlite3": "^4.1.0",
     "uuid": "^3.3.2",
     "xhr2": "^0.1.4"
