--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "json2csv": "^4.5.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.7.0",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^4.44.3",
     "uuid": "^3.3.2",
     "xhr2": "^0.1.4"
