Modified docker file to use postgres and development.json according to docker file

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
-MYSQL_PROJECT_DB_PORT=8084
-MYSQL_VERSION=5.7
-DB_PORT=3306
+LOCAL_DB_PORT=8084
+SERVER_ENGINE_VERSION=11.5
+SERVICE_PORT=5432
 DB_DATABASE=person_db
 DB_USERNAME=person_db_user
 DB_PASSWORD=secret
